# GenAIExamples

ChatQnA/docker_compose/intel/cpu/xeon/: README_graphrag.md  compose_graphrag.yaml  set_env.sh
GraphRAG/: NOTES.md  env-example  pyproject.toml
GraphRAG/notebooks/: 1.GeoArea.ipynb  2.UN_SDGs.ipynb  8.UN_SDG_Reports.ipynb
GraphRAG/notebooks/data/: .gitignore  8.UN_reports_2024-extended.json  8.UN_reports_2024.json
