[tool.poetry]
name = "opea-graphrag-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
neo4j = "^5.24.0"
pandas = "^2.2.2"
numpy = "<2.0.0"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.5"
aiohttp = "^3.9.3"
llama-index = "^0.11.5"
llama-index-graph-stores-neo4j = "^0.3.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipython = "^8.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
